--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <a class="cta" href="#"><button>Contact</button></a>
         </header>
         <div class="container">
+            <p>
+                Test
+                <button class="bg">Background</button>
+            </p>
         </div>
         <script src="script-for-index.js"></script>
     </body>
