--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header class="Con">
-            <h2 ><a href="#" calss="Logo">Logo</a></h2>
+            <h2><a href="#" class="Logo">Logo</a></h2>
             <nav>
                 <ul class="nav_links">
                     <li><a href="#">Services</a></li>
