--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <p>
                 Test
-                <button id="bg">Background</button>
+                <button class="B" id="bg">Background</button>
             </p>
         </div>
         <script src="script-for-index.js"></script>
